--- a/po-docs/ja/guestfish-actions.pod
+++ b/po-docs/ja/guestfish-actions.pod
@@ -27,7 +27,7 @@ L</add-drive-ro> instead.
 
 =back
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
+This function is deprecated.  In new code, use the L</add_drive_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -155,7 +155,7 @@ is added read-only, with the format being detected automatically.
 This is the same as L</add-drive-ro> but it allows you to specify the QEMU
 interface emulation to use at run time.
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
+This function is deprecated.  In new code, use the L</add_drive_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -169,7 +169,7 @@ these functions.
 This is the same as L</add-drive> but it allows you to specify the QEMU
 interface emulation to use at run time.
 
-This function is deprecated.  In new code, use the C<add_drive_opts> call
+This function is deprecated.  In new code, use the L</add_drive_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -928,7 +928,7 @@ size C<len> bytes.  If the file exists already, it is overwritten.
 Do not confuse this with the guestfish-specific C<alloc> command which
 allocates a file in the host and attaches it as a device.
 
-This function is deprecated.  In new code, use the C<fallocate64> call
+This function is deprecated.  In new code, use the L</fallocate64> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -1273,7 +1273,7 @@ Return the direct appliance mode flag.
 
 This returns the ext2/3/4 filesystem label of the filesystem on C<device>.
 
-This function is deprecated.  In new code, use the C<vfs_label> call
+This function is deprecated.  In new code, use the L</vfs_label> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -1286,7 +1286,8 @@ these functions.
 
 This returns the ext2/3/4 filesystem UUID of the filesystem on C<device>.
 
-This function is deprecated.  In new code, use the C<vfs_uuid> call instead.
+This function is deprecated.  In new code, use the L</vfs_uuid> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -2911,7 +2912,7 @@ filesystem type, but typically they are C<1024>, C<2048> or C<4096> only.
 For VFAT and NTFS the C<blocksize> parameter is treated as the requested
 cluster size.
 
-This function is deprecated.  In new code, use the C<mkfs_opts> call
+This function is deprecated.  In new code, use the L</mkfs_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -3109,7 +3110,7 @@ reliability.  Therefore we recommend that you avoid using L</mount> in any
 code that needs performance, and instead use L</mount-options> (use an empty
 string for the first parameter if you don't want any options).
 
-This function is deprecated.  In new code, use the C<mount_options> call
+This function is deprecated.  In new code, use the L</mount_options> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -3219,7 +3220,7 @@ without booting into Windows between each resize.
 
 See also L<ntfsresize(8)>.
 
-This function is deprecated.  In new code, use the C<ntfsresize_opts> call
+This function is deprecated.  In new code, use the L</ntfsresize_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -3267,7 +3268,7 @@ ARGUMENTS>.
 This command is the same as L</ntfsresize> except that it allows you to
 specify the new size (in bytes) explicitly.
 
-This function is deprecated.  In new code, use the C<ntfsresize_opts> call
+This function is deprecated.  In new code, use the L</ntfsresize_opts> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -4125,7 +4126,8 @@ See also: L</sfdisk-l>, L</sfdisk-N>, L</part-init>
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4145,7 +4147,8 @@ See also: L</sfdisk>, the L<sfdisk(8)> manpage and L</part-disk>
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4166,7 +4169,8 @@ See also: L</part-add>
 B<This command is dangerous.  Without careful use you can easily destroy all
 your data>.
 
-This function is deprecated.  In new code, use the C<part_add> call instead.
+This function is deprecated.  In new code, use the L</part_add> call
+instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4200,7 +4204,7 @@ of the L<sfdisk(8)> command.  It is not intended to be parsed.
 
 See also: L</part-list>
 
-This function is deprecated.  In new code, use the C<part_list> call
+This function is deprecated.  In new code, use the L</part_list> call
 instead.
 
 Deprecated functions will not be removed from the API, but the fact that
@@ -4818,7 +4822,7 @@ I<not> work, even if the length is specified.
 Because of the message protocol, there is a transfer limit of somewhere
 between 2MB and 4MB.  See L<guestfs(3)/PROTOCOL LIMITS>.
 
-This function is deprecated.  In new code, use the C<write> call instead.
+This function is deprecated.  In new code, use the L</write> call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
@@ -4905,7 +4909,7 @@ C<method> must be one of C<gzip>, C<compress> or C<bzip2>.
 
 Since 1.0.63, use L</file> instead which can now process compressed files.
 
-This function is deprecated.  In new code, use the C<file> call instead.
+This function is deprecated.  In new code, use the L</file> call instead.
 
 Deprecated functions will not be removed from the API, but the fact that
 they are deprecated indicates that there are problems with correct use of
