--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1.12.3-2) unstable; urgency=low
+
+  * Brown paper bag release
+  * [33f8362] Fixed update script.
+  * [d703c73] fixed guestfsd dependencies
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 13 Aug 2011 00:32:03 +0200
+
 libguestfs (1.12.3-1) unstable; urgency=low
 
   * New upstream version
