--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+libguestfs (1:1.20.1-1) unstable; urgency=low
+
+  * New upstream version
+  * Rebased patch queue: added fixes for tests, don't install Erlang
+    bindings to multiarch directory, fix appliance packagelist
+  * Added Lua bindings
+  * Updated Build-Depends
+  * Simplified dh_install target
+  * Install guestfsd manpage
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 05 Jan 2013 00:52:02 +0100
+
 libguestfs (1:1.18.11-1) unstable; urgency=low
 
   * New upstream version
