--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.20.2-1) unstable; urgency=low
+
+  * New upstream version
+  * Make sure that extconf.rb is generated
+  * Updated patch queue
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 19 Feb 2013 23:30:01 +0100
+
 libguestfs (1:1.20.1-2) unstable; urgency=low
 
   * Fixed Build-Dependencies: The fuse-utils package is no longer
