--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libguestfs (1:1.20.3-1) unstable; urgency=low
+
+  * New upstream version
+  * Dropped patches that were integrated upstream.
+  * Increased minimum version of febootstrap to 3.20 since earlier
+    versions did not support --copy-kernel
+  * Added localized manpages (po4a build-dependency, out-of-tree build fix)
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 07 Mar 2013 00:13:41 +0100
+
 libguestfs (1:1.20.2-1) unstable; urgency=low
 
   * New upstream version
