--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.20.3-2) unstable; urgency=low
+
+  * Added libguestfs-make-fixed-appliance to libguestfs-tools
+  * Added related udev rules to guestfsd
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 08 Mar 2013 20:41:41 +0100
+
 libguestfs (1:1.20.3-1) unstable; urgency=low
 
   * New upstream version
