--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.20.4-1) unstable; urgency=low
+
+  * New upstream version
+  * Dropped patches that have been integrated upstream. The removal of
+    -Werror for Ruby bindings seems no longer necessary.
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 13 Mar 2013 20:23:01 +0100
+
 libguestfs (1:1.20.3-2) unstable; urgency=low
 
   * Added libguestfs-make-fixed-appliance to libguestfs-tools
