--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.20.6-1) unstable; urgency=low
+
+  * New upstream version
+  * Dropped patches that have been integrated upstream
+  * Set INSTALLDIRS for installing Ruby bindings
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 12 Apr 2013 08:28:47 +0200
+
 libguestfs (1:1.20.4-1) unstable; urgency=low
 
   * New upstream version
