--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+libguestfs (1:1.20.6-2) unstable; urgency=low
+
+  * Cleaned up misplaced and duplicate bash completion conffiles
+    (Closes: #703396).
+
+    In 1:1.14.8-3, the dh_bash-completion file was moved to from
+    libguestfs-tools to guestfish. In 1:1.18.10-1, the dh_bash-completion
+    file was replaced with an entry in guestfish.install which caused the
+    installed file to be renamed.
+
+    Thanks to Paul Wise for spotting this.
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 17 Apr 2013 21:27:43 +0200
+
 libguestfs (1:1.20.6-1) unstable; urgency=low
 
   * New upstream version
