--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.21.31-1) experimental; urgency=low
+
+  * New upstream development version
+  * Added guestunmount, bash completion rules that have been split and
+    moved to /usr/share.
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 19 Apr 2013 08:13:15 +0200
+
 libguestfs (1:1.20.6-3) unstable; urgency=low
 
   * Really enabled gtk-doc
