--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.21.32-1) experimental; urgency=low
+
+  * New upstream development version
+  * Adapted watch file for development versions
+  * Depend on "real" febootstrap 3 for now
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 23 Apr 2013 22:28:49 +0200
+
 libguestfs (1:1.21.31-1) experimental; urgency=low
 
   * New upstream development version
