--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.21.33-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 27 Apr 2013 13:05:38 +0200
+
 libguestfs (1:1.21.32-1) experimental; urgency=low
 
   * New upstream development version
