--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.21.35-1) experimental; urgency=low
+
+  * New upstream development version
+  * febootstrap -> supermin transition
+  * Dropped patch for building the Perl bindings out-of-tree: A different
+    solution has been adopted upstream
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 01 May 2013 13:08:31 +0200
+
 libguestfs (1:1.21.33-1) experimental; urgency=low
 
   * New upstream development version
