--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+libguestfs (1:1.21.40-1) experimental; urgency=low
+
+  * New upstream development version
+  * Updated patch queue
+  * Disabled unreliable test-utimens, test-futimens (gnulib)
+  * Added various fixes for building Perl and Python bindings
+    - Correct paths for building, testing Perl shared library
+    - Build Python3 extensions with PEP-3149-compliant suffix
+  * rules cleanup
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 25 May 2013 14:41:18 +0200
+
 libguestfs (1:1.21.39-1) experimental; urgency=low
 
   * New upstream development version
