--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+libguestfs (1:1.22.2-1) unstable; urgency=low
+
+  * New upstream version
+  * Updated patch queue
+    - Drop SELinux mountpoint fix (integrated upstream)
+    - revert to symlink-based hack for building Perl bindings
+    - Disable gnulib tests by default
+  * Avoid installing (Perl) bindtests
+  * Added separate package for Python 3 bindings
+  * Added parallel build support
+  * Changed dependencies to qemu-system-x86
+  * Updated exclude list for dh_makeshlibs
+  * Updated year in debian/copyright
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 03 Jun 2013 23:49:41 +0200
+
 libguestfs (1:1.21.40-1) experimental; urgency=low
 
   * New upstream development version
