--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+libguestfs (1:1.22.3-1) unstable; urgency=low
+
+  * New upstream version
+  * Updated patch queue
+  * Fix dh_python3 call to generate correct dependencies for
+    python3-guestfs. Thanks to Scott Kitterman. (Closes: #711928)
+  * debian/watch: Do not consider development versions
+  * Removed support for parallel builds since it caused make 3.81 to hang
+    (#714072)
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 25 Jun 2013 23:12:28 +0200
+
 libguestfs (1:1.22.2-1) unstable; urgency=low
 
   * New upstream version
