--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.23.7-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 06 Jul 2013 10:52:43 +0200
+
 libguestfs (1:1.23.6-1) experimental; urgency=low
 
   * New upstream development version
