--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.24.1-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 02 Nov 2013 21:19:10 +0100
+
 libguestfs (1:1.23.33-1) experimental; urgency=low
 
   * New upstream development version
