--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.24.2-1) unstable; urgency=low
+
+  * New upstream version
+  * Added fix for installing manpages
+  * Merged guestmount into libguestfs-tools package (Closes: #729156)
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 07 Dec 2013 18:00:59 +0100
+
 libguestfs (1:1.24.1-1) unstable; urgency=low
 
   * New upstream version
