--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.13-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 09 Dec 2013 09:17:21 +0100
+
 libguestfs (1:1.24.2-1) unstable; urgency=low
 
   * New upstream version
