--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.25.18-1) experimental; urgency=low
+
+  * New upstream development version
+  * Moved golang-guestfs-dev to devel section
+  * Updated symbols file
+  * Enabled parallel builds
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 21 Dec 2013 12:45:00 +0100
+
 libguestfs (1:1.25.15-1) experimental; urgency=low
 
   * New upstream development version
