--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.19-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 03 Jan 2014 10:12:45 +0100
+
 libguestfs (1:1.25.18-1) experimental; urgency=low
 
   * New upstream development version
