--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.25.26-1) experimental; urgency=low
+
+  * New upstream development version
+  * Replaced dependencies: module-init-tools -> kmod (Closes: #733698)
+  * Bumped Standards-Version
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 23 Jan 2014 21:42:24 +0100
+
 libguestfs (1:1.25.19-1) experimental; urgency=low
 
   * New upstream development version
