--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.25.33-1) experimental; urgency=low
+
+  * New upstream development version
+  * Updated symbols file
+  * Rebased patch queue
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 13 Feb 2014 08:19:38 +0100
+
 libguestfs (1:1.25.26-1) experimental; urgency=low
 
   * New upstream development version
