--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.36-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 17 Feb 2014 20:18:57 +0100
+
 libguestfs (1:1.25.33-1) experimental; urgency=low
 
   * New upstream development version
