--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.25.37-1) experimental; urgency=low
+
+  * New upstream development version
+  * Rebased patch-queue; added patch to remove cruft from appliance
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 23 Feb 2014 13:23:23 +0100
+
 libguestfs (1:1.25.36-1) experimental; urgency=low
 
   * New upstream development version
