--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.25.41-1) experimental; urgency=low
+
+  * New upstream development version
+  * Updated dependencies; enabled building on more architectures
+  * Fixed installation
+  * Updated patch queue
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 04 Mar 2014 21:37:08 +0100
+
 libguestfs (1:1.25.37-1) experimental; urgency=low
 
   * New upstream development version
