--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.42-1) experimental; urgency=low
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 07 Mar 2014 09:38:46 +0100
+
 libguestfs (1:1.25.41-1) experimental; urgency=low
 
   * New upstream development version
