--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.25.43-1) experimental; urgency=low
+
+  * New upstream development version
+  * Updated patch queue; upstream now makes it possible (not the default)
+    to disable the Gnulib tests.
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 08 Mar 2014 18:17:22 +0100
+
 libguestfs (1:1.25.42-1) experimental; urgency=low
 
   * New upstream development version
