--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.25.43-2) experimental; urgency=medium
+
+  * Ship libguestfs0 with supermin 5 appliance in /usr/lib/<multiarch> --
+    no more update-libguestfs-appliance
+  * Thanks to Richard W.M. Jones for providing the initial patch for that
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 16 Mar 2014 15:52:46 +0100
+
 libguestfs (1:1.25.43-1) experimental; urgency=low
 
   * New upstream development version
