--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.43-3) experimental; urgency=medium
+
+  * Fixed build-dependencies for non-x86 architectures
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 16 Mar 2014 23:16:45 +0100
+
 libguestfs (1:1.25.43-2) experimental; urgency=medium
 
   * Ship libguestfs0 with supermin 5 appliance in /usr/lib/<multiarch> --
