--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.25.45-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Fixed up build-dependencies so we can at least have a stab at building
+    on !x86
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 17 Mar 2014 23:40:35 +0100
+
 libguestfs (1:1.25.43-3) experimental; urgency=medium
 
   * Fixed build-dependencies for non-x86 architectures
