--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.46-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 21 Mar 2014 00:07:38 +0100
+
 libguestfs (1:1.25.45-1) experimental; urgency=medium
 
   * New upstream development version
