--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.46-3) experimental; urgency=medium
+
+  * Added patch to relax grub dependency
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 25 Mar 2014 13:10:16 +0100
+
 libguestfs (1:1.25.46-2) experimental; urgency=medium
 
   * Automatically add appliance dependencies to libguestfs0
