--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.25.49-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 27 Mar 2014 15:07:14 +0100
+
 libguestfs (1:1.25.46-3) experimental; urgency=medium
 
   * Added patch to relax grub dependency
