--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.26.0-1) unstable; urgency=medium
+
+  * New upstream version
+  * Updated watch file
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 28 Mar 2014 12:38:04 +0100
+
 libguestfs (1:1.25.49-1) experimental; urgency=medium
 
   * New upstream development version
