--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.27.6-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+  * Split off ZFS-specific dependencies from libguestfs  (Closes: #648291)
+  * Added patch for building with qemu 2+
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 22 Apr 2014 23:19:06 +0200
+
 libguestfs (1:1.26.0-1) unstable; urgency=medium
 
   * New upstream version
