--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+libguestfs (1:1.27.11-1) experimental; urgency=medium
+
+  * New upstream development version
+  * On powerpc architecture, use qemu-system-ppc64 for -M pseries and
+    linux-image-powerpc64
+  * Split off specific dependencies from libguestfs0 (Closes: #648291,
+    #681889, #736597, #742944)
+  * Run "make quickcheck" only once
+  * Rebased patch queue
+  * Updated symbols file
+  
+ -- Hilko Bengen <bengen@debian.org>  Sat, 17 May 2014 21:29:58 +0200
+
 libguestfs (1:1.27.6-1) experimental; urgency=medium
 
   * New upstream development version
