--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.27.12-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 23 May 2014 19:23:11 +0200
+
 libguestfs (1:1.27.11-1) experimental; urgency=medium
 
   * New upstream development version
