--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.27.13-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated patch queue
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 25 May 2014 11:10:30 +0200
+
 libguestfs (1:1.27.12-1) experimental; urgency=medium
 
   * New upstream development version
