--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.27.14-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 31 May 2014 12:59:23 +0200
+
 libguestfs (1:1.27.13-1) experimental; urgency=medium
 
   * New upstream development version
