--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.27.39-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Added missing virt-p2v directory
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 09 Sep 2014 17:49:06 +0200
+
 libguestfs (1:1.27.35-1) experimental; urgency=medium
 
   * New upstream development version
