--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.27.41-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 09 Sep 2014 22:48:54 +0200
+
 libguestfs (1:1.27.39-1) experimental; urgency=medium
 
   * New upstream development version
