--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.27.46-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Removed upstream patches
+
+ -- Hilko Bengen <bengen@debian.org>  Mon, 15 Sep 2014 22:36:03 +0200
+
 libguestfs (1:1.27.45-1) experimental; urgency=medium
 
   * New upstream development version
