--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.27.49-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Added systemd bits to appliance
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 19 Sep 2014 18:16:24 +0200
+
 libguestfs (1:1.27.46-1) experimental; urgency=medium
 
   * New upstream development version
