--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libguestfs (1:1.27.54-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Dropped patch that has been integrated upstream
+  * Updated symbols file; made guestfs_internal_* symbols (which are not
+    considered part of the API) optional
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 25 Sep 2014 21:11:41 +0200
+
 libguestfs (1:1.27.49-1) experimental; urgency=medium
 
   * New upstream development version
