--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.27.57-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 02 Oct 2014 08:07:46 +0200
+
 libguestfs (1:1.27.55-1) experimental; urgency=medium
 
   * New upstream development version
