--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+libguestfs (1:1.27.62-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Moved build dependency from libsystemd-<specific>-dev to
+    libsystemd-dev, removed build dependencies on specific libsystemd
+    library packages. (Closes: #763710, #763741)
+  * Moved package post-processing (appliance-splitting, appliance-specific
+    dependencies) from debian/rules to external shell scripts
+  * Added lintian override because sysvinit is no longer essential
+  * Fixed FTBFS on architectures without zfs-fuse
+  * Removed unused .install file
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 12 Oct 2014 13:29:45 +0200
+
 libguestfs (1:1.27.57-1) experimental; urgency=medium
 
   * New upstream development version
