--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.4-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 01 Nov 2014 19:49:52 +0100
+
 libguestfs (1:1.28.2-1) unstable; urgency=medium
 
   * New upstream version
