--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.5-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Dropped patch that was integrated upstream
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 06 Nov 2014 15:13:11 +0100
+
 libguestfs (1:1.29.4-1) experimental; urgency=medium
 
   * New upstream development version
