--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.6-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 07 Nov 2014 21:09:14 +0100
+
 libguestfs (1:1.29.5-1) experimental; urgency=medium
 
   * New upstream development version
