--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.7-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sun, 16 Nov 2014 18:36:43 +0100
+
 libguestfs (1:1.29.6-1) experimental; urgency=medium
 
   * New upstream development version
