--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.8-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Tue, 18 Nov 2014 23:13:56 +0100
+
 libguestfs (1:1.29.7-1) experimental; urgency=medium
 
   * New upstream development version
