--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.9-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 22 Nov 2014 10:59:07 +0100
+
 libguestfs (1:1.29.8-1) experimental; urgency=medium
 
   * New upstream development version
