--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.10-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 26 Nov 2014 00:35:15 +0100
+
 libguestfs (1:1.29.9-1) experimental; urgency=medium
 
   * New upstream development version
