--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.11-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 28 Nov 2014 15:12:36 +0100
+
 libguestfs (1:1.29.10-1) experimental; urgency=medium
 
   * New upstream development version
