--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.12-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 29 Nov 2014 12:21:54 +0100
+
 libguestfs (1:1.29.11-1) experimental; urgency=medium
 
   * New upstream development version
