--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.13-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 05 Dec 2014 20:15:22 +0100
+
 libguestfs (1:1.29.12-1) experimental; urgency=medium
 
   * New upstream development version
