--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.14-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Fri, 12 Dec 2014 09:35:44 +0100
+
 libguestfs (1:1.29.13-1) experimental; urgency=medium
 
   * New upstream development version
