--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libguestfs (1:1.29.23-1) experimental; urgency=medium
+
+  * New upstream development version
+
+ -- Hilko Bengen <bengen@debian.org>  Wed, 28 Jan 2015 01:26:55 +0100
+
 libguestfs (1:1.29.22-1) experimental; urgency=medium
 
   * New upstream development version
