--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libguestfs (1:1.29.24-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+
+ -- Hilko Bengen <bengen@debian.org>  Thu, 05 Feb 2015 13:18:15 +0100
+
 libguestfs (1:1.29.23-1) experimental; urgency=medium
 
   * New upstream development version
