--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libguestfs (1:1.29.29-1) experimental; urgency=medium
+
+  * New upstream development version
+  * Updated symbols file
+  * Rebased patch queue
+
+ -- Hilko Bengen <bengen@debian.org>  Sat, 07 Mar 2015 20:42:08 +0100
+
 libguestfs (1:1.29.26-1) experimental; urgency=medium
 
   * New upstream development version
